--- a/templates/options/save_game.html
+++ b/templates/options/save_game.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% load staticfiles %}
+{% block style %}
+  <link rel="styleSheet" type="text/css" href="{% static 'options/style.css' %}" />
+{% endblock %}
+
 {% block content %}
   <p>
     options / save_game
