--- a/templates/titleScreen/index.html
+++ b/templates/titleScreen/index.html
@@ -6,7 +6,11 @@
 {% endblock %}
 
 {% block content %}
-  <p>
-    TitleScreen
-  </p>
+  <div>
+    Bienvenue dans Moviemon
+    <ol>
+      <li><a href="/worldmap">New Game</a></li>
+      <li><a href="/options/load_game">Load</li>
+    </ol>
+  </div>
 {% endblock %}
