--- a/templates/worldMap/index.html
+++ b/templates/worldMap/index.html
@@ -2,11 +2,61 @@
 
 {% load staticfiles %}
 {% block style %}
-  <link rel="styleSheet" type="text/css" href="{% static 'worldScreen/style.css' %}" />
+  <link rel="styleSheet" type="text/css" href="{% static 'worldMap/style.css' %}" />
+{% endblock %}
+
+{% block A %}
+  {% if moviemon_id %}
+    <a class="button" href="{% url 'battle' moviemon_id %}"></a>
+  {% endif %}
+{% endblock %}
+
+{% block up %}
+  <a class="button" href="/worldMap?move=up"></a>
+{% endblock %}
+
+{% block down %}
+  <a class="button" href="/worldMap?move=down"></a>
+{% endblock %}
+
+{% block right %}
+  <a class="button" href="/worldMap?move=right"></a>
+{% endblock %}
+
+{% block left %}
+  <a class="button" href="/worldMap?move=left"></a>
+{% endblock %}
+
+{% block start %}
+  <a class="button" href="/options"></a>
+{% endblock %}
+
+{% block select %}
+  <a class="button" href="/moviedex"></a>
 {% endblock %}
 
 {% block content %}
-  <p>
-    worldMap
-  </p>
+  <div id='worldMap'>
+    {% for i in lines %}
+      <div class="line">
+        {% for j in columns %}
+          <div class="case"></div>
+        {% endfor %}
+      </div>
+    {% endfor %}
+    <div>
+      Movieballs : {{movieballs}}
+    </div>
+    {% if find_movieball %}
+      <div>
+        Vous avez trouvé une movieball !
+      </div>
+    {% endif %}
+    {% if find_moviemon %}
+      <div>
+        Vous avez debusqué un moviemon !
+        Appuyer sur A pour essayer de le capturer
+      </div>
+    {% endif %}
+  </div>
 {% endblock %}
