--- a/templates/titleScreen/index.html
+++ b/templates/titleScreen/index.html
@@ -5,6 +5,15 @@
   <link rel="styleSheet" type="text/css" href="{% static 'titleScreen/style.css' %}" />
 {% endblock %}
 
+
+{% block A %}
+  <a class="button" href="/worldmap"></a>
+{% endblock %}
+
+{% block B %}
+  <a class="button" href="/options/load_game"></a>
+{% endblock %}
+
 {% block content %}
   <div>
     Bienvenue dans Moviemon
