--- a/templates/titleScreen/index.html
+++ b/templates/titleScreen/index.html
@@ -9,7 +9,7 @@
   <div>
     Bienvenue dans Moviemon
     <ol>
-      <li><a href="/worldmap">New Game</a></li>
+      <li><a href="/worldmap?new=true">New Game</a></li>
       <li><a href="/options/load_game">Load</li>
     </ol>
   </div>
