--- a/worldMap/static/worldMap/style.css
+++ b/worldMap/static/worldMap/style.css
@@ -21,9 +21,16 @@ body, html {
   border: 1px solid grey;
 }
 
-/* A migrer vers templates/media/base.css */
+.info {
+  position: absolute;
+  margin: 10px;
+  color: white;
+}
 
-.button {
-  width: 100%;
-  height: 100%;
+.new_moviemon {
+  color: orange;
+}
+
+.new_movieball {
+  color: green;
 }
