fix button class

--- a/templates/titleScreen/index.html
+++ b/templates/titleScreen/index.html
@@ -7,19 +7,19 @@
 
 
 {% block A %}
-  <a class="button" href="/worldmap"></a>
+  <a class="fill-div" href="/worldmap?new=true"></a>
 {% endblock %}
 
 {% block B %}
-  <a class="button" href="/options/load_game"></a>
+  <a class="fill-div" href="/options/load_game"></a>
 {% endblock %}
 
 {% block content %}
   <div>
     Bienvenue dans Moviemon
     <ol>
-      <li><a href="/worldmap?new=true">New Game</a></li>
-      <li><a href="/options/load_game">Load</li>
+      <li>New Game</a></li>
+      <li>Load</li>
     </ol>
   </div>
 {% endblock %}
