--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -2,11 +2,20 @@
 
 {% load staticfiles %}
 {% block style %}
-  <link rel="styleSheet" type="text/css" href="{% static 'base/style.css' %}" />
+  <link rel="styleSheet" type="text/css" href="{% static 'battle/style.css' %}" />
 {% endblock %}
 
 {% block content %}
-  <p>
-    battle with {{moviemon_id}}
-  </p>
+<div class="movie-section">
+    <img class= "poster" src = "https://upload.wikimedia.org/wikipedia/en/3/35/The_Monster_poster.jpg" left=50%>
+</div>
+
+<div class="info-section">
+
+</div>
+
+<div class="player-section">
+
+</div>
+
 {% endblock %}
