--- a/templates/options/save_game.html
+++ b/templates/options/save_game.html
@@ -5,8 +5,35 @@
   <link rel="styleSheet" type="text/css" href="{% static 'options/style.css' %}" />
 {% endblock %}
 
+{% block start %}
+  <a class="fill-div" href="/worldmap"></a>
+{% endblock %}
+
+{% block A %}
+  <a class="fill-div" href="/options/save_game"></a>
+{% endblock %}
+
+{% block B %}
+  <a class="fill-div" href="/"></a>
+{% endblock %}
+
+{% block up %}
+  <a class="fill-div" href="/options/save_game?slot={{slot_up}}"></a>
+{% endblock %}
+
+{% block down %}
+  <a class="fill-div" href="/options/save_game?slot={{slot_down}}"></a>
+{% endblock %}
+
+
+
 {% block content %}
-  <p>
-    options / save_game
-  </p>
+  <div>
+    Choisir un slot
+    <ul>
+      <li>{% if slot_current == 0 %}->{% endif %} Slot A : {{slot_list.A}}</li>
+      <li>{% if slot_current == 1 %}->{% endif %} Slot B : {{slot_list.B}}</li>
+      <li>{% if slot_current == 2 %}->{% endif %} Slot C : {{slot_list.C}}</li>
+    </ul>
+  </div>
 {% endblock %}
