--- a/templates/titleScreen/index.html
+++ b/templates/titleScreen/index.html
@@ -18,7 +18,7 @@
   <div>
     Bienvenue dans Moviemon
     <ol>
-      <li>New Game</a></li>
+      <li>New Game</li>
       <li>Load</li>
     </ol>
   </div>
