add method save_slot, get_score and get_max_score

--- a/templates/options/save_game.html
+++ b/templates/options/save_game.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block A %}
-  <a class="fill-div" href="/options/save_game"></a>
+  <a class="fill-div" href="/options/save_game?save={{slot_letter}}"></a>
 {% endblock %}
 
 {% block B %}
