wip battle + data.get_by_id()

--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -7,15 +7,26 @@
 
 {% block content %}
 <div class="movie-section">
-    <img class= "poster" src = "https://upload.wikimedia.org/wikipedia/en/3/35/The_Monster_poster.jpg" left=50%>
+
+  <div class="info">
+    <ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+  </div>
+  <div class=mvi>
+    <img src = "https://upload.wikimedia.org/wikipedia/en/3/35/The_Monster_poster.jpg" height="100%" width="auto">
+  </div>
 </div>
 
 <div class="info-section">
-
 </div>
 
 <div class="player-section">
-
+  <div class= "pli">
+    <img src = "http://www.42.fr/wp-content/themes/42/images/42_logo_black.svg" height="100%" width="auto">
+  </div>
 </div>
 
 {% endblock %}
