--- a/battle/static/battle/style.css
+++ b/battle/static/battle/style.css
@@ -1,23 +1,34 @@
 .movie-section{
-  width: 100%;
-  height:40%;
+  	width: 100%;
+  	height:40%;
 }
 
 .player-section{
-  width: 100%;
-  height:40%;
+	width: 100%;
+	height:40%;
 }
 
 .info-section{
-  width: 100%;
-  height:20%;
+	width: 100%;
+	height:20%;
 }
 
-.poster{
+.mvi{
+	position:relative;
+	width: 30%;
 	height:100%;
-	width:auto;
+	left:600px
 }
 
-mvi.poster{
-	
+.pli{
+	position:relative;
+	width: 30%;
+	height:100%;
+	left: 100px;
+}
+
+.info{
+	position: absolute;
+	width: 30%;
+	height:100%;
 }
