--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -10,10 +10,9 @@
 
   <div class="info">
     <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>
+      <li>Name : </li>
+      <li>Strenght : {{Movie.box_office}}</li>
+    </ul>
   </div>
   <div class=mvi>
     <img src = "https://upload.wikimedia.org/wikipedia/en/3/35/The_Monster_poster.jpg" height="100%" width="auto">
