--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -8,14 +8,14 @@
 {% block content %}
 <div class="movie-section">
 
-  <div class="info">
+  <div class="info-movie">
     <ul>
-      <li>Name : </li>
+      <li>Name : {{Movie.name}}</li>
       <li>Strenght : {{Movie.box_office}}</li>
     </ul>
   </div>
   <div class=mvi>
-    <img src = "https://upload.wikimedia.org/wikipedia/en/3/35/The_Monster_poster.jpg" height="100%" width="auto">
+    <img src = {{Movie.poster}} height="100%" width="auto">
   </div>
 </div>
 
@@ -23,6 +23,12 @@
 </div>
 
 <div class="player-section">
+  <div class="info-player">
+    <ul>
+      <li>Name : {{Movie.name}}</li>
+      <li>Strenght : {{Movie.box_office}}</li>
+    </ul>
+  </div>
   <div class= "pli">
     <img src = "http://www.42.fr/wp-content/themes/42/images/42_logo_black.svg" height="100%" width="auto">
   </div>
