--- a/templates/options/load_game.html
+++ b/templates/options/load_game.html
@@ -5,8 +5,37 @@
   <link rel="styleSheet" type="text/css" href="{% static 'options/style.css' %}" />
 {% endblock %}
 
+{% block A %}
+  <a class="fill-div" href="/options/save_game?slot={{slot_current}}&save={{slot_current}}"></a>
+{% endblock %}
+
+{% block B %}
+  <a class="fill-div" href="/options"></a>
+{% endblock %}
+
+{% block up %}
+  <a class="fill-div" href="/options/save_game?slot={{slot_up}}"></a>
+{% endblock %}
+
+{% block down %}
+  <a class="fill-div" href="/options/save_game?slot={{slot_down}}"></a>
+{% endblock %}
+
+
+
 {% block content %}
-  <p>
-    options / load
-  </p>
+  <div>
+    <h2>Charger une partie</h2>
+    <ul>
+      {% for slot, score in saved.items %}
+        <li>
+          {% if slot_current == slot %}->{% endif %} Slot {{slot|upper}} : {{score}}
+        </li>
+      {% endfor %}
+    </ul>
+    <ol>
+      <li>Load</li>
+      <li>Cancel</li>
+    </ol>
+  </div>
 {% endblock %}
