--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -25,8 +25,9 @@
 <div class="player-section">
   <div class="info-player">
     <ul>
-      <li>Name : {{Movie.name}}</li>
-      <li>Strenght : {{Movie.box_office}}</li>
+      <li>MovieBalls : {{balls}}</li>
+      <li>Strenght : {{strenght}}</li>
+      <li>Succes rate : {{rate}}</li>
     </ul>
   </div>
   <div class= "pli">
