add load_save method

--- a/templates/options/load_game.html
+++ b/templates/options/load_game.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block A %}
-  <a class="fill-div" href="/options/save_game?slot={{slot_current}}&save={{slot_current}}"></a>
+  <a class="fill-div" href="/options/save_game?slot={{slot_current}}&load={{slot_current}}"></a>
 {% endblock %}
 
 {% block B %}
