--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block B %}
-  <a class="fill-div" href="/worldmap" title="Back"></a>
+  <a class="fill-div" href="/worldmap?flee=True" title="Back"></a>
 {% endblock %}
 
 
