--- a/battle/static/battle/style.css
+++ b/battle/static/battle/style.css
@@ -42,3 +42,11 @@
 	height:40%;
 	left : 400px;
 }
+
+.info-commands{
+	position: relative;
+	font-size: 20px;
+	width: 30%;
+	height:20%;
+	left : 700px;
+}
