--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block B %}
-  <a class="fill-div" href="/worldmap?flee=True" title="Back"></a>
+  <a class="fill-div" href="/worldmap?flee=True" title="Back to woldmap"></a>
 {% endblock %}
 
 
@@ -30,6 +30,12 @@
 
 <div class="info-section">
 {{info}}
+<div class=info-commands>
+   <ul>
+      <li>A: Throw a movieball</li>
+      <li>B: Back to worldmap</li>
+    </ul>
+</div>
 </div>
 <div class="player-section">
   <div class="info-player">
