--- a/templates/options/index.html
+++ b/templates/options/index.html
@@ -21,8 +21,8 @@
   <div>
     Options
     <ol>
-      <li>Save</li>
-      <li>Quit</li>
+      <li>A - Save</li>
+      <li>B - Quit</li>
     </ol>
   </div>
 {% endblock %}
