--- a/templates/options/load_game.html
+++ b/templates/options/load_game.html
@@ -38,8 +38,8 @@
       {% endfor %}
     </ul>
     <ol>
-      <li>{% if ready %}Start game{% else %}Load{% endif %}</li>
-      <li>Cancel</li>
+      <li>A - {% if ready %}Start game{% else %}Load{% endif %}</li>
+      <li>B - Cancel</li>
     </ol>
   </div>
 {% endblock %}
