--- a/templates/options/save_game.html
+++ b/templates/options/save_game.html
@@ -34,8 +34,8 @@
       {% endfor %}
     </ul>
     <ol>
-      <li>Save</li>
-      <li>Cancel</li>
+      <li>A - Save</li>
+      <li>B - Cancel</li>
     </ol>
   </div>
 {% endblock %}
