--- a/templates/titleScreen/index.html
+++ b/templates/titleScreen/index.html
@@ -18,8 +18,8 @@
   <div>
     Bienvenue dans Moviemon
     <ol>
-      <li>New Game</li>
-      <li>Load</li>
+      <li>A - New Game</li>
+      <li>B - Load</li>
     </ol>
   </div>
 {% endblock %}
