--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -38,7 +38,9 @@
 {{info}}
 <div class=info-commands>
    <ul>
+     {% if catched == "True"%}
       <li>A: Throw a movieball</li>
+      {% endif %}
       <li>B: Back to worldmap</li>
     </ul>
 </div>
