--- a/templates/movieDex/detail.html
+++ b/templates/movieDex/detail.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-  <div>
+  <div id='detail'>
     <h2>{{name}}</h2>
     <img src="{{movie.poster}}" />
     <div>
