--- a/templates/worldMap/index.html
+++ b/templates/worldMap/index.html
@@ -52,7 +52,7 @@
       <div>
         Movieballs : {{movieballs}}
       </div>
-      {% if find_movieball %}
+      {% if movieball %}
         <div class="new_movieball">
           Vous avez trouvé une movieball !
         </div>
