load to titlescreen

--- a/templates/options/load_game.html
+++ b/templates/options/load_game.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block B %}
-  <a class="fill-div" href="/options"></a>
+  <a class="fill-div" href="/"></a>
 {% endblock %}
 
 {% block up %}
