--- a/movieDex/static/movieDex/style.css
+++ b/movieDex/static/movieDex/style.css
@@ -1,19 +1,21 @@
-div#movie_dex{
+
+.movie_dex{
   max-height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   overflow: scroll;
 }
-div#movie_dex img{
+
+.movie_dex img{
     border: 5px solid transparent;
 }
 
-div#movie_dex img.selected{
+.movie_dex img.selected{
     border: 5px solid green;
 }
 
-#detail {
+.detail {
   display: flex;
   flex-direction: column;
   justify-content: center;
