--- a/templates/battle/index.html
+++ b/templates/battle/index.html
@@ -38,7 +38,7 @@
 {{info}}
 <div class=info-commands>
    <ul>
-     {% if catched == "True"%}
+     {% if catched != "True"%}
       <li>A: Throw a movieball</li>
       {% endif %}
       <li>B: Back to worldmap</li>
